--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,13 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
+
+# intelliJ IDEA
+/.idea/
+/*.iml
+/out/
+/build/
+.DS_Store
+Thumbs.db
+*.ipr
+*.iws
